# tri9t-ai-assignment

./: .env.example  .gitignore  APPROACH_DOCUMENT.md  ASSIGNMENT_BREAKDOWN.md  PROJECT_SUMMARY.md  README.md  SUBMISSION_GUIDE.md  main.py  models.py  parser.py  pyproject.toml  repro_ingest.py  requirements.txt  test_e2e_flow.py  test_parser_blocks.py  tri9t_api.postman_collection.json  versioning.py
